# shovel

./: .gitignore  README.md  compose.prod.yaml  compose.yaml  docker-compose.yml  docker-compose.yml.cue  example.env
grafana/: Dockerfile
grafana/dashboards/: home.json  suricata.json
grafana/provisioning/datasources/: sql.yml
suricata/: .dockerignore  Dockerfile  entrypoint.sh  suricata.yaml
suricata/rules/: suricata.rules
suricata/suricata-eve-sql-output/: Cargo.toml
suricata/suricata-eve-sql-output/src/: database.rs  ffi.rs  lib.rs  schema.sql
suricata/suricata-eve-sqlite-output/: Cargo.toml
suricata/suricata-eve-sqlite-output/src/: database.rs  lib.rs  schema.sql
suricata/suricata-filedata-sql-output/: Cargo.toml
suricata/suricata-filedata-sql-output/src/: database.rs  lib.rs
suricata/suricata-rawdata-sql-output/: Cargo.toml
suricata/suricata-rawdata-sql-output/src/: database.rs  lib.rs
webapp/: Dockerfile  main.py
webapp/static/: index.html  index.html.license
webapp/static/css/: style.css
webapp/static/js/: flowdisplay.js  flowlist.js  progressbar.js
webapp/templates/: index.html.jinja2
