# Copyright (C) 2026  A. Iooss
# SPDX-License-Identifier: CC0-1.0

[package]
name = "suricata-rawdata-sql-output"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "rawdata_sql_output"

[dependencies]
env_logger = { version = "0.11.5", default-features = false }
log = "0.4.22"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "sqlite"], default-features = false }
suricata-sys = "8.0.4"
tokio = { version = "1.50.0", features = ["rt"] }
